src/objects/APTS_ItemRelevancyDetermination__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>APTS_Charge_Type__c</fullName>
        <label>Charge Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Type__c</fullName>
        <label>Contract Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Order_Type_List__c</fullName>
        <description>Put list of SAP Order Types for which Item Relevancy is True, separated with comma.</description>
        <label>SAP Order Type List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Item Relevancy Determination</label>
</CustomObject>